# llvm-cross-module-function-clone

./: .gitignore  CMakeLists.txt  README.md  main.cpp  module-a.ll  module-b.ll
